--- a/css/modulr/core/button.scss
+++ b/css/modulr/core/button.scss
@@ -501,18 +501,18 @@ a.addon:hover {
 
   &.hover-disable:hover {
     background: transparent !important;
-    background-image: none !Important;
+    background-image: none !important;
     cursor: default;
   }
 
   &.hover-fill-transparent:hover {
     background: transparent !important;
-    background-image: none !Important;
+    background-image: none !important;
   }
 }
 
 .btn-addon .btn:hover {
-  background-image: none !Important;
+  background-image: none !important;
 }
 
 .btn.hover-fill-disable:hover {
