--- a/css/modulr/core/button.scss
+++ b/css/modulr/core/button.scss
@@ -14,7 +14,7 @@
   padding: 5px  10px;
   line-height: 1.42857143;
   text-align: center;
-  white-space: nowrap;
+  white-space: normal;
   vertical-align: middle;
   border: 1px solid transparent;
   transition: background  ease-in-out 0.1s;
